--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js", 
-    "heroku-postbuild": "echo Skip builds on Heroku"
+    "start": "node server.js",
+    "heroku-postbuild": "cd client && npm install && npm run build"
   },
   "repository": {
     "type": "git",
@@ -18,7 +18,7 @@
     "url": "https://github.com/coding-boot-camp/unit18hw/issues"
   },
   "engines": {
-    "node": "12.x", 
+    "node": "12.x",
     "npm": "6.14.x"
   },
   "homepage": "https://github.com/coding-boot-camp/unit18hw#readme",
